Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.1
Description
The currently generated TypeScript functions that have no parameters, but include a callback, contain an extra comma in the parameter list.
Example: function(, callback: Function)
{...}This patch fixes this problem and also corrects the indentation for generated JavaScript maps, which looked different from the rest.