THRIFT-2901 Fix for generated TypeScript functions + indentation of JavaScript maps