compiler/cpp/src/generate/t_js_generator.cc
@@ -539,7 +539,8 @@ string t_js_generator::render_const_value(t_type* type, t_const_value* value) {
     t_type* ktype = ((t_map*)type)->get_key_type();
 
     t_type* vtype = ((t_map*)type)->get_val_type();
-    out << "{";
+    out << "{" << endl;
+    indent_up();
 
     const map<t_const_value*, t_const_value*>& val = value->get_map();
     map<t_const_value*, t_const_value*>::const_iterator v_iter;
@@ -547,12 +548,13 @@ string t_js_generator::render_const_value(t_type* type, t_const_value* value) {
       if (v_iter != val.begin())
         out << "," << endl;
 
-      out << render_const_value(ktype, v_iter->first);
+      out << indent() << render_const_value(ktype, v_iter->first);
 
       out << " : ";
       out << render_const_value(vtype, v_iter->second);
     }
 
+    indent_down();
     out << endl << "}";
   } else if (type->is_list() || type->is_set()) {
     t_type* etype;
@@ -2024,13 +2026,13 @@ std::string t_js_generator::ts_function_signature(t_function* tfunction, bool in
   for (f_iter = fields.begin(); f_iter != fields.end(); ++f_iter) {
     str += (*f_iter)->get_name() + ts_get_req(*f_iter) + ": " + ts_get_type((*f_iter)->get_type());
 
-    if (f_iter + 1 != fields.end()) {
+    if (f_iter + 1 != fields.end() || include_callback) {
       str += ", ";
     }
   }
 
   if (include_callback) {
-    str += ", callback: Function): ";
+    str += "callback: Function): ";
 
     if (gen_jquery_) {
       str += "JQueryXHR;";
